Summary: | ASTERISK-30092: DateTime application: wrong inflection for one o'clock in German | ||
Reporter: | Christof Efkemann (christof) | Labels: | |
Date Opened: | 2022-06-01 14:55:11 | Date Closed: | 2022-06-08 19:50:15 |
Priority: | Minor | Regression? | |
Status: | Closed/Complete | Components: | Applications/app_sayunixtime |
Versions: | 18.12.0 | Frequency of Occurrence | Constant |
Related Issues: | |||
Environment: | Rocky Linux 8.6, x86_64 AMD GX-412TC | Attachments: | |
Description: | When using DateTime() to say a time in German, one o'clock will be spoken as "eins Uhr" instead of "ein Uhr". This can be reproduced for example with:
Set(CHANNEL(language)=de) DateTime(1653952500,Europe/Berlin,HM) | ||
Comments: | By: Asterisk Team (asteriskteam) 2022-06-01 14:55:11.628-0500 Thanks for creating a report! The issue has entered the triage process. That means the issue will wait in this status until a Bug Marshal has an opportunity to review the issue. Once the issue has been reviewed you will receive comments regarding the next steps towards resolution. Please note that log messages and other files should not be sent to the Sangoma Asterisk Team unless explicitly asked for. All files should be placed on this issue in a sanitized fashion as needed. A good first step is for you to review the [Asterisk Issue Guidelines|https://wiki.asterisk.org/wiki/display/AST/Asterisk+Issue+Guidelines] if you haven't already. The guidelines detail what is expected from an Asterisk issue report. Then, if you are submitting a patch, please review the [Patch Contribution Process|https://wiki.asterisk.org/wiki/display/AST/Patch+Contribution+Process]. Please note that once your issue enters an open state it has been accepted. As Asterisk is an open source project there is no guarantee or timeframe on when your issue will be looked into. If you need expedient resolution you will need to find and pay a suitable developer. Asking for an update on your issue will not yield any progress on it and will not result in a response. All updates are posted to the issue when they occur. Please note that by submitting data, code, or documentation to Sangoma through JIRA, you accept the Terms of Use present at [https://www.asterisk.org/terms-of-use/|https://www.asterisk.org/terms-of-use/]. By: Friendly Automation (friendly-automation) 2022-06-08 19:50:16.972-0500 Change 18629 merged by Friendly Automation: app_sayunixtime: Use correct inflection for German time. [https://gerrit.asterisk.org/c/asterisk/+/18629|https://gerrit.asterisk.org/c/asterisk/+/18629] By: Friendly Automation (friendly-automation) 2022-06-08 19:50:31.995-0500 Change 18627 merged by Friendly Automation: app_sayunixtime: Use correct inflection for German time. [https://gerrit.asterisk.org/c/asterisk/+/18627|https://gerrit.asterisk.org/c/asterisk/+/18627] By: Friendly Automation (friendly-automation) 2022-06-08 20:39:32.907-0500 Change 18628 merged by Friendly Automation: app_sayunixtime: Use correct inflection for German time. [https://gerrit.asterisk.org/c/asterisk/+/18628|https://gerrit.asterisk.org/c/asterisk/+/18628] By: Friendly Automation (friendly-automation) 2022-06-09 03:46:42.235-0500 Change 18626 merged by Joshua Colp: app_sayunixtime: Use correct inflection for German time. [https://gerrit.asterisk.org/c/asterisk/+/18626|https://gerrit.asterisk.org/c/asterisk/+/18626] |